pkg/ibmvpc/examples/out/explain_out/subnetToVsiSingleVpc_all_vpcs_explain_detail.txt
Explaining connectivity from subnet1-ky to 10.240.20.4 within test-vpc1-ky
Interpreted source(s): vsi1-ky[10.240.10.4]
Interpreted destination(s): vsi2-ky[10.240.20.4]
==========================================================================

No connectivity from vsi1-ky[10.240.10.4] to vsi2-ky[10.240.20.4];
	connection is blocked at egress

Egress: security group sg1-ky does not allow connection; network ACL acl1-ky allows connection
Ingress: network ACL acl2-ky allows connection; security group sg2-ky allows connection

Path:
	vsi1-ky[10.240.10.4] -> | security group sg1-ky |


Details:
~~~~~~~~
Path is disabled; The relevant rules are:
	Egress:
		security group sg1-ky has no relevant rules
		network ACL acl1-ky allows connection with the following allow rules
			name: outbound, priority: 1, action: allow, direction: outbound, source: 0.0.0.0/0, destination: 0.0.0.0/0, protocol: all

	Ingress:
		network ACL acl2-ky allows connection with the following allow rules
			name: inbound, priority: 1, action: allow, direction: inbound, source: 0.0.0.0/0, destination: 0.0.0.0/0, protocol: all
		security group sg2-ky allows connection with the following allow rules
			id: id:147, direction: inbound, local: 0.0.0.0/0, remote: sg1-ky (10.240.10.4/32), protocol: all

------------------------------------------------------------------------------------------------------------------------
